--- a/app/sass/utils/_font-and-colors.sass
+++ b/app/sass/utils/_font-and-colors.sass
@@ -1,8 +1,8 @@
-@font-face
-	font-family: 'Brandon Grotesque'
-	src: url('../fonts/Brandon-Grotesque-Font/Brandon Grotesque/BrandonGrotesque-Thin.eot')
-	src: url('../fonts/Brandon-Grotesque-Font/Brandon Grotesque/BrandonGrotesque-Thin.eot?#iefix') format('embedded-opentype'),
-	url('../fonts/Brandon-Grotesque-Font/Brandon Grotesque/BrandonGrotesque-Thin.woff') format('woff'),
-	url('../fonts/Brandon-Grotesque-Font/Brandon Grotesque/BrandonGrotesque-Thin.ttf') format('truetype')
-	font-weight: normal
-	font-style: normal
+//@font-face
+//	font-family: 'Brandon Grotesque Thin'
+//	src: url('../fonts/Brandon-Grotesque-Font/Brandon Grotesque/BrandonGrotesque-Thin.eot')
+//	src: url('../fonts/Brandon-Grotesque-Font/Brandon Grotesque/BrandonGrotesque-Thin.eot?#iefix') format('embedded-opentype'),
+//	url('../fonts/Brandon-Grotesque-Font/Brandon Grotesque/BrandonGrotesque-Thin.woff') format('woff'),
+//	url('../fonts/Brandon-Grotesque-Font/Brandon Grotesque/BrandonGrotesque-Thin.ttf') format('truetype')
+//	font-weight: normal
+//	font-style: normal
