--- a/app/sass/utils/_variabels.sass
+++ b/app/sass/utils/_variabels.sass
@@ -1,22 +1,18 @@
 //text-style
-//$main-background:#ffffff
-$main-font-size: 14px
-$title-font-size: 40px
-$main-font: 'Montserrat', sans-serif
-$main-color: #4d4d4d;
-$secondary-color: #323232
+
+$main-font: 'Brandon Grotesque', sans-serif
+$main-color: #777777;
+$secondary-color: #000000
+$light-color: #ffffff
 $button-text-color: #ffffff
-$desc-color: #848e97;
-$main-weight: 400;
-$border: 1px solid;
+$title-font-size: 45px
+$main-font-size: 16px
+$title-mobile-font-size: 25px
+$mobile-font-size: 14px
+$main-weight: 400
+$bold-weight: 700
 //$headlines: ;
-//$img-text-desc: ;
 $tc: center;
-%main-text
-	font-size: $main-font-size;
-	font-family: $main-font;
-	color: $main-color;
-	font-weight: $main-weight;
 
 %flex-center
 	display: flex
