--- a/app/sass/main.sass
+++ b/app/sass/main.sass
@@ -1,45 +1,7 @@
-@import 'utils/_font-and-colors.sass'
-@import 'utils/_global.sass'
+//@import 'utils/_font-and-colors.sass'
 @import 'utils/_mixins.sass'
 @import 'utils/_variabels.sass'
-
-a
-	text-decoration: none
-button
-	background: transparent
-	border: solid #fff
-	padding: 10px 40px
-.button-text
-	color: #fff
-	font-family: "Brandon Grotesque"
-	font-size: 23px
-.title
-	text-align: center
-	margin-bottom: 35px
-	color: #222222
-	font-family: "Brandon Grotesque"
-	font-size: 45px
-	font-family: "Brandon Grotesque Light"
-	font-weight: 300
-	&-allotment
-		font-family: "Brandon Grotesque Bold"
-		font-weight: 700
-		&-white
-			color: #fff
-			font-family: "Brandon Grotesque Bold";
-			font-weight: 700;
-	&-desc
-		text-align: center
-		color: #777777;
-		font-family: "Brandon Grotesque";
-		font-size: 18px;
-		font-weight: 400;
-	&-white
-		color: #fff
-		font-family: "Brandon Grotesque Light";
-		font-weight: 300;
-
-
+@import 'utils/_global.sass'
 
 .header
 	+flex-flow(row nowrap)
@@ -49,27 +11,35 @@ button
 		width: 20%
 		+flex-align(center)
 		&-name
-			color: #fff
-			font-size: 25px;
-			font-weight: 700
-			text-transform: uppercase;
+			color: $light-color
+			font-size: $main-font-size + 3px
+			font-weight: $bold-weight
+			text-transform: uppercase
+			@media screen and (min-width: 350px)
+				font-size: $main-font-size + 9px
 	&-menu
 		+flex-justify(flex-end)
 		align-items: center
 		width: 80%
 		&-row
-			+flex-flow(row wrap)			
+			+flex-flow(row wrap)
 			visibility: hidden
 			position: absolute
 			@media screen and (min-width: 740px)
 				visibility: visible
 				position: static
 			&-element
-				padding: 5px
+				padding: 10px 15px
+				background: transparent
+				&:hover
+					transition: 0.5s
+					background: $light-color
+				&:hover &-name
+					transition: 0.5s
+					color: $secondary-color
 				&-name
-					color: #fff;
-					font-family: "Brandon Grotesque";
-					font-size: 18px;
+					color: $light-color
+					font-size: $main-font-size + 2px
 			
 .main-page
 	text-align: center
@@ -78,23 +48,26 @@ button
 	&-section
 		padding-bottom: 80px
 		&-question
-			color: #fff
-			font-family: "Brandon Grotesque"
-			font-size: 20px
-			font-weight: 300
+			color: $light-color
+			font-size: $main-font-size - 2px
+			@media screen and (min-width: 350px)
+				font-size: $main-font-size + 4px
+			
 h1
 	margin-top: 30px
 	margin-bottom: 55px
-	color: #fff
-	font-family: "Brandon Grotesque"
-	font-size: 56px
-	font-weight: 700
+	color: $light-color
+	font-size: $main-font-size*2
+	font-weight: $bold-weight
 	text-transform: uppercase
+	@media screen and (min-width: 350px)
+		font-size: $main-font-size*3.5
+
 .menu-btn
 	display: block
 	width: 30px
 	height: 30px
-	background-color: yellow
+	background-color: transparent
 	position: relative
 	visibility: visible
 	@media screen and (min-width: 740px)
@@ -108,7 +81,7 @@ h1
 		left: 50%
 		width: 20px
 		height: 2px
-		background-color: #222
+		background-color: $light-color
 		visibility: visible
 		@media screen and (min-width: 740px)
 			visibility: hidden
@@ -121,7 +94,7 @@ h1
 		left: 50%
 		width: 20px
 		height: 2px
-		background-color: #222
+		background-color: $light-color
 		content: ''
 		display: block
 		transition: 0.2s
@@ -138,7 +111,7 @@ h1
 		left: 50%
 		width: 20px
 		height: 2px
-		background-color: #222
+		background-color: $light-color
 		content: ''
 		display: block
 		transition: 0.2s
@@ -156,8 +129,6 @@ h1
 	transform: rotate(35deg)
 	width: 10px
 	transform-origin: left top
-
-
 
 .adaptive-content
 	padding-top: 80px
@@ -211,6 +182,7 @@ h1
 				width: 45%
 				margin-right: 5%
 		&-img
+			margin-bottom: 25px
 			width: 100%
 			+flex-short(center, flex-start)
 			@media screen and (min-width: 350px)
@@ -221,9 +193,8 @@ h1
 				width: calc(100% - 20px - 72px)
 			&-title
 				margin-bottom: 10px
-				color: #222222
-				font-family: "Brandon Grotesque"
-				font-size: 22px
+				color: #222222				
+				font-size: $main-font-size + 6px
 				font-weight: 500
 		@each $img-number in (1,2,3,4,5,6)
 			&-image-#{$img-number}
@@ -268,21 +239,22 @@ h1
 				background: url('../img/clients-page/Speak_Box-right.png') no-repeat
 				background-size: 100% 100%
 blockquote
-	margin-bottom: 15px
-	color: #777777;
-	font-family: "Brandon Grotesque";
-	font-size: 20px;
-	font-weight: 400;
+	margin-bottom: 15px	
+	font-size: $main-font-size
+	@media screen and (min-width: 350px)
+		font-size: $main-font-size + 4px
+	
 .quote-name
-	color: #7690c5;
-	font-family: "Brandon Grotesque";
-	font-size: 18px;
-	font-weight: 400;
+	color: #7690c5
+	font-size: $main-font-size - 2px
+	@media screen and (min-width: 350px)
+		font-size: $main-font-size + 2px
+	
 
 .logos-list
 	+flex-all(center, center, row wrap)
 	&-elements
-		+flex-short(center, center)
+		@extend %flex-center
 		width: 100%
 		margin: 20px 10px 20px 0px
 		@media screen and (min-width: 500px)
@@ -301,8 +273,7 @@ blockquote
 			&-1
 				width: 160px
 				background: url('../img/firm-logo-page/Envato.png') no-repeat
-				background-size: 100%
-				
+				background-size: 100%				
 			&-2
 				width: 185px
 				background: url('../img/firm-logo-page/WordPress.png') no-repeat
@@ -316,7 +287,7 @@ blockquote
 				background: url('../img/firm-logo-page/Microlancer_copy.png') no-repeat
 
 .team
-	background: #000
+	background: #111
 	padding-bottom: 70px
 	&-title
 		margin-bottom: 60px
@@ -326,10 +297,11 @@ blockquote
 		@media screen and (min-width: 740px)
 			+flex-justify(flex-start)
 		&-element
-			border: 1px solid
 			width: 100%
-			+flex-short(center, center)
+			@extend %flex-center
 			flex-flow: column
+			margin-top: 30px
+			text-align: center
 			@media screen and (min-width: 450px)
 				width: 45%
 			@media screen and (min-width: 740px)
@@ -346,24 +318,25 @@ blockquote
 					@media screen and (min-width: 740px)
 						width: 220px
 						height: 220px
+
 			&-desc
 				+flex-flow(column nowrap)
 				text-align: center
 				&-name
 					margin-top: 20px
-					color: #fff;
-					font-family: "Brandon Grotesque Bold";
-					font-size: 18px;
-					font-weight: 700
+					color: $light-color
+					font-family: "Brandon Grotesque Bold"
+					font-size: $main-font-size + 2px
+					font-weight: $bold-weight
 				&-prof
 					margin-top: 5px
 					margin-bottom: 5px
-					color: #ebebeb;
-					font-family: "Brandon Grotesque Regular";
-					font-size: 16px;
-					font-weight: 400;
+					color: #ebebeb
+					font-family: "Brandon Grotesque Regular"
+					
+					
 			&-button-list
-				+flex-short(center,center)
+				@extend %flex-center
 				&-element
 					margin-right: 5px
 					height: 42px
@@ -372,14 +345,16 @@ blockquote
 					background-size: cover
 	&-desc
 		margin-top: 40px
-		+flex-short(center, center)
+		@extend %flex-center
 		&-text
 			width: 70%
 			text-align: center
-			color: #ebebeb;
-			font-family: "Brandon Grotesque";
-			font-size: 18px;
-			font-weight: 400;
+			color: #ebebeb
+			font-size: $main-font-size
+			@media screen and (min-width: 350px)		
+				font-size: $main-font-size + 2px
+
+			
 
 footer
 	background-color: #7690c5
@@ -391,45 +366,39 @@ footer
 				width: 50%
 		&-title
 			text-align: left
-			color: #fff
+			color: $light-color
 			font-size: 60px
 			font-family: "Brandon Grotesque Light"
-			font-weight: 300
 			&-allotment
-				color: #fff
+				color: $light-color
 				font-family: "Brandon Grotesque Bold"
-				font-weight: 700
+				font-weight: $bold-weight
 			&-desc
-				color: #fff
-				font-family: "Brandon Grotesque"
-				font-size: 16px
-				font-weight: 400
+				color: $light-color
+				
+				
 		&-list
 			+flex-flow(row wrap)
-			&-element
-				
+			&-element				
 				+flex-flow(row wrap)
 				width: 100%
 				margin: 0
 				margin-top: 20px
 				@media screen and (min-width: 740px)
 						width: 50%
-				&-img
-					
+				&-img					
 					width: 30px
 					+flex-short(center, flex-start)
 				&-container
-					width: 100%
+					width: calc(100% - 30px)
 					+flex-short(flex-start, center)
 					@media screen and (min-width: 350px)
 						width: calc(100% - 20px - 72px)
 					&-text
-						color: #fff
-						font-family: "Brandon Grotesque"
-						font-size: 16px
-						font-weight: 400
-				&-image
-					
+						color: $light-color						
+						
+						
+				&-image					
 					&-1
 						height: 30px		
 						width: 20px
@@ -442,21 +411,18 @@ footer
 		&-input
 			margin-top: 20px
 			padding: 15px
-			width: 90% //425
-			//border: 0.1px solid #BEBEBE
+			width: 90%
 		&-textarea
 			margin-top: 20px
 			padding: 15px
-			width: 90% //450
+			width: 90%
 			min-height: 200px
-			//border: 0.5px solid #BEBEBE
 .copyright
 	margin-top: 100px
-	padding: 30px
-	border-top: 0.1px solid #Fff
-	+flex-short(center, center)
+	padding: 20px
+	border-top: 0.1px solid $light-color
+	@extend %flex-center
 	span
-		color: #fff
-		font-family: "Brandon Grotesque"
-		font-size: 16px
-		font-weight: 400
+		color: $light-color
+		
+		
