all is fast ready

--- a/app/sass/main.sass
+++ b/app/sass/main.sass
@@ -1,428 +1,11 @@
-//@import 'utils/_font-and-colors.sass'
 @import 'utils/_mixins.sass'
 @import 'utils/_variabels.sass'
 @import 'utils/_global.sass'
-
-.header
-	+flex-flow(row nowrap)
-	align-items: center
-	margin-bottom: 140px
-	&-logo
-		width: 20%
-		+flex-align(center)
-		&-name
-			color: $light-color
-			font-size: $main-font-size + 3px
-			font-weight: $bold-weight
-			text-transform: uppercase
-			@media screen and (min-width: 350px)
-				font-size: $main-font-size + 9px
-	&-menu
-		+flex-justify(flex-end)
-		align-items: center
-		width: 80%
-		&-row
-			+flex-flow(row wrap)
-			visibility: hidden
-			position: absolute
-			@media screen and (min-width: 740px)
-				visibility: visible
-				position: static
-			&-element
-				padding: 10px 15px
-				background: transparent
-				&:hover
-					transition: 0.5s
-					background: $light-color
-				&:hover &-name
-					transition: 0.5s
-					color: $secondary-color
-				&-name
-					color: $light-color
-					font-size: $main-font-size + 2px
-			
-.main-page
-	text-align: center
-	background: url('../img/background/background-main.png') no-repeat
-	background-size: cover
-	&-section
-		padding-bottom: 80px
-		&-question
-			color: $light-color
-			font-size: $main-font-size - 2px
-			@media screen and (min-width: 350px)
-				font-size: $main-font-size + 4px
-			
-h1
-	margin-top: 30px
-	margin-bottom: 55px
-	color: $light-color
-	font-size: $main-font-size*2
-	font-weight: $bold-weight
-	text-transform: uppercase
-	@media screen and (min-width: 350px)
-		font-size: $main-font-size*3.5
-
-.menu-btn
-	display: block
-	width: 30px
-	height: 30px
-	background-color: transparent
-	position: relative
-	visibility: visible
-	@media screen and (min-width: 740px)
-		visibility: hidden
-		position: absolute
-	span
-		position: absolute
-		margin-top: -1px
-		margin-left: -10px
-		top: 50%
-		left: 50%
-		width: 20px
-		height: 2px
-		background-color: $light-color
-		visibility: visible
-		@media screen and (min-width: 740px)
-			visibility: hidden
-			position: absolute
-	span::before
-		position: absolute
-		margin-top: -1px
-		margin-left: -10px
-		top: 50%
-		left: 50%
-		width: 20px
-		height: 2px
-		background-color: $light-color
-		content: ''
-		display: block
-		transition: 0.2s
-		transform: translateY(-5px)
-		visibility: visible
-		@media screen and (min-width: 740px)
-			visibility: hidden
-			position: absolute
-	span::after
-		position: absolute
-		margin-top: -1px
-		margin-left: -10px
-		top: 50%
-		left: 50%
-		width: 20px
-		height: 2px
-		background-color: $light-color
-		content: ''
-		display: block
-		transition: 0.2s
-		transform: translateY(5px)
-		visibility: visible
-		@media screen and (min-width: 740px)
-			visibility: hidden
-			position: absolute	
-
-.menu-btn:hover span:before
-	transform: rotate(-35deg)
-	width: 10px
-	transform-origin: left bottom
-.menu-btn:hover span:after
-	transform: rotate(35deg)
-	width: 10px
-	transform-origin: left top
-
-.adaptive-content
-	padding-top: 80px
-	+flex-all(center, center, row wrap)
-	&-container
-		width: 100%
-		@media screen and (min-width: 740px)
-			width: 60%
-
-
-.branding
-	background-color: #fafafa
-	&-title
-		text-align: left
-	&-container
-		@media screen and (min-width: 740px)
-			width: calc(60% - 70px)
-			margin-left: 70px
-	&-img
-		width: 275px
-		height: 200px
-		display: flex 
-		order: 2
-		@media screen and (min-width: 740px) 
-			order: 0
-		background-size: cover
-		background: url('../img/main-page/Users-Icon.png') no-repeat
-.web-development
-	&-title
-		text-align: left
-	&-container
-		@media screen and (min-width: 740px)
-			width: calc(60% - 70px)
-			margin-right: 70px
-	&-img
-		width: 250px
-		height: 220px
-		background-size: cover
-		background: url('../img/main-page/flow-tree-icon.png') no-repeat
-
-
-
-.skills-list
-	+flex-flow(row wrap)
-	&-element
-		+flex-flow(row wrap)
-		width: 100%
-		margin-right: 0
-		margin-top: 50px
-		@media screen and (min-width: 740px)
-				width: 45%
-				margin-right: 5%
-		&-img
-			margin-bottom: 25px
-			width: 100%
-			+flex-short(center, flex-start)
-			@media screen and (min-width: 350px)
-				width: calc(100% - (100% - 20px - 72px))
-		&-container
-			width: 100%
-			@media screen and (min-width: 350px)
-				width: calc(100% - 20px - 72px)
-			&-title
-				margin-bottom: 10px
-				color: #222222				
-				font-size: $main-font-size + 6px
-				font-weight: 500
-		@each $img-number in (1,2,3,4,5,6)
-			&-image-#{$img-number}
-				height: 72px			
-				width: 72px
-				background: url('../img/skills-page/#{$img-number}.png') no-repeat
-				background-size: 100% 100%
-.clients
-	background-color: #fafafa
-	&-img
-		width: 220px
-		height: 220px
-		background: url('../img/clients-page/Container.png') no-repeat
-		background-size: cover
-		&-12
-			visibility: hidden
-			position: absolute
-			@media screen and (min-width: 910px)
-				position: static
-				visibility: visible
-		&-2
-			visibility: visible
-			position: static
-			@media screen and (min-width: 910px)
-				position: absolute
-				visibility: hidden
-	&-container
-		padding: 55px 50px
-		text-align: left
-		&-1
-			margin-left: 25px
-			background: url('../img/clients-page/Speak_Box-top.png') no-repeat
-			background-size: 100% 100%
-			@media screen and (min-width: 910px)
-				background: url('../img/clients-page/Speak_Box-left.png') no-repeat
-				background-size: 100% 100%
-		&-2
-			margin-right: 25px
-			background: url('../img/clients-page/Speak_Box-top.png') no-repeat
-			background-size: 100% 100%
-			@media screen and (min-width: 910px)
-				background: url('../img/clients-page/Speak_Box-right.png') no-repeat
-				background-size: 100% 100%
-blockquote
-	margin-bottom: 15px	
-	font-size: $main-font-size
-	@media screen and (min-width: 350px)
-		font-size: $main-font-size + 4px
-	
-.quote-name
-	color: #7690c5
-	font-size: $main-font-size - 2px
-	@media screen and (min-width: 350px)
-		font-size: $main-font-size + 2px
-	
-
-.logos-list
-	+flex-all(center, center, row wrap)
-	&-elements
-		@extend %flex-center
-		width: 100%
-		margin: 20px 10px 20px 0px
-		@media screen and (min-width: 500px)
-			width: 45%
-			margin: 20px 10px 20px 0px
-		@media screen and (min-width: 890px)
-			width: 20%
-			margin-right: 5%
-		&-last
-			margin-right: 0
-		&-img
-			height: 40px
-			@media screen and (min-width: 890px)
-				width: 100%
-			background-size: 100%
-			&-1
-				width: 160px
-				background: url('../img/firm-logo-page/Envato.png') no-repeat
-				background-size: 100%				
-			&-2
-				width: 185px
-				background: url('../img/firm-logo-page/WordPress.png') no-repeat
-				background-size: 100%
-			&-3
-				width: 130px
-				background: url('../img/firm-logo-page/Tuts+.png') no-repeat
-				background-size: 100%
-			&-4
-				width: 165px
-				background: url('../img/firm-logo-page/Microlancer_copy.png') no-repeat
-
-.team
-	background: #111
-	padding-bottom: 70px
-	&-title
-		margin-bottom: 60px
-	&-list
-		+flex-all(center, center, row wrap)
-		padding: 0
-		@media screen and (min-width: 740px)
-			+flex-justify(flex-start)
-		&-element
-			width: 100%
-			@extend %flex-center
-			flex-flow: column
-			margin-top: 30px
-			text-align: center
-			@media screen and (min-width: 450px)
-				width: 45%
-			@media screen and (min-width: 740px)
-				width: 33%
-			@each $img-number in (1,2,3)
-				&-img-#{$img-number}
-					width: 150px
-					height: 150px
-					background: url('../img/team-page/Container.png') no-repeat
-					background-size: 100%
-					@media screen and (min-width: 450px)
-						width: 170px
-						height: 170px
-					@media screen and (min-width: 740px)
-						width: 220px
-						height: 220px
-
-			&-desc
-				+flex-flow(column nowrap)
-				text-align: center
-				&-name
-					margin-top: 20px
-					color: $light-color
-					font-family: "Brandon Grotesque Bold"
-					font-size: $main-font-size + 2px
-					font-weight: $bold-weight
-				&-prof
-					margin-top: 5px
-					margin-bottom: 5px
-					color: #ebebeb
-					font-family: "Brandon Grotesque Regular"
-					
-					
-			&-button-list
-				@extend %flex-center
-				&-element
-					margin-right: 5px
-					height: 42px
-					width: 41px
-					background: url('../img/team-page/Twitter_Background.png') no-repeat
-					background-size: cover
-	&-desc
-		margin-top: 40px
-		@extend %flex-center
-		&-text
-			width: 70%
-			text-align: center
-			color: #ebebeb
-			font-size: $main-font-size
-			@media screen and (min-width: 350px)		
-				font-size: $main-font-size + 2px
-
-			
-
-footer
-	background-color: #7690c5
-.say-hello
-	+flex-flow(row wrap)
-	&-text
-		width: 100%
-		@media screen and (min-width: 740px)
-				width: 50%
-		&-title
-			text-align: left
-			color: $light-color
-			font-size: 60px
-			font-family: "Brandon Grotesque Light"
-			&-allotment
-				color: $light-color
-				font-family: "Brandon Grotesque Bold"
-				font-weight: $bold-weight
-			&-desc
-				color: $light-color
-				
-				
-		&-list
-			+flex-flow(row wrap)
-			&-element				
-				+flex-flow(row wrap)
-				width: 100%
-				margin: 0
-				margin-top: 20px
-				@media screen and (min-width: 740px)
-						width: 50%
-				&-img					
-					width: 30px
-					+flex-short(center, flex-start)
-				&-container
-					width: calc(100% - 30px)
-					+flex-short(flex-start, center)
-					@media screen and (min-width: 350px)
-						width: calc(100% - 20px - 72px)
-					&-text
-						color: $light-color						
-						
-						
-				&-image					
-					&-1
-						height: 30px		
-						width: 20px
-						background: url('../img/Mail-Icon.png') no-repeat
-						background-size: 100% 100%
-	&-form
-		width: 100%
-		@media screen and (min-width: 740px)
-				width: 50%
-		&-input
-			margin-top: 20px
-			padding: 15px
-			width: 90%
-		&-textarea
-			margin-top: 20px
-			padding: 15px
-			width: 90%
-			min-height: 200px
-.copyright
-	margin-top: 100px
-	padding: 20px
-	border-top: 0.1px solid $light-color
-	@extend %flex-center
-	span
-		color: $light-color
-		
-		
+@import 'components/_header.sass'
+@import 'components/_main-page.sass'
+@import 'components/_services.sass'
+@import 'components/_skills.sass'
+@import 'components/_clients.sass'
+@import 'components/_logos.sass'
+@import 'components/_team.sass'	
+@import 'components/_footer.sass'
