--- a/app/sass/components/_main-page.sass
+++ b/app/sass/components/_main-page.sass
@@ -7,18 +7,18 @@
 		&-question
 			color: $light-color
 			font-size: $main-font-size - 2px
-			@media screen and (min-width: 350px)
+			@media screen and (min-width: 550px)
 				font-size: $main-font-size + 4px
 			
 h1
 	margin-top: 30px
 	margin-bottom: 55px
 	color: $light-color
-	font-size: $main-font-size*2
+	font-size: $main-font-size + 25px
 	font-weight: $bold-weight
 	text-transform: uppercase
-	@media screen and (min-width: 350px)
-		font-size: $main-font-size*3.5
+	@media screen and (min-width: 550px)
+		font-size: $main-font-size + 44px
 
 .menu-btn
 	display: block
